# hellotext

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build_em.sh  hellotext.cpp  index.html  stb_image.c  vcpkg.json
.github/workflows/: emscripten-build.yml
demos/: app.hpp  text_bounce.hpp
shaders/: basic.frag  basic.vert  text.frag  text.vert  text.webgl.frag  text.webgl.vert
shaders/opengl/: base.vert  color.frag  color.vert  text.frag  text.vert  texture.frag  texture.vert
shaders/webgl/: base.vert  color.frag  text.frag  text.vert  texture.frag
txt/: buffer.cpp  buffer.hpp  descriptor.cpp  descriptor.hpp  event.hpp  fonts.cpp  fonts.hpp  image.cpp  image.hpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  text_engine.cpp  text_engine.hpp  texture.cpp  texture.hpp  utility.hpp  window.cpp  window.hpp
